[metadata]
name = Written-Book-Exporter
version = 0.1
description = Exports all written books from a Minecraft World
author = TheRedstoneer
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
licence = MIT
[options]

packages = written_book_exporter
python_requires = >=3.8

